# deCentra

./: .env.local  .gitignore  .ic-assets.json5  AUTHENTICATION-REFACTOR-COMPLETE.md  Cargo.toml  IMPLEMENTED-FEATURES.md  PHASE-1-COMPLETE.md  PHASE-1-REVIEW-REPORT.md  PROFILE-CREATION-CONSISTENCY-FIX.md  PROFILE-CREATION-IMPLEMENTATION.md  README.md  dfx.json  package-lock.json  package.json
.devcontainer/: devcontainer.json
.github/docs/: CONTRIBUTING.md  README  dev-setup-and-getting-started.md
.github/instructions/: accessibility.instructions.md  api-docs.instructions.md  authentication.instructions.md  backend-test.instructions.md  cert.instructions.md  code-quality.instructions.md  deployment.instructions.md  error-handling.instructions.md  frontend-enhancement-master.instructions.md  frontend-layout.instructions.md  frontend-test.instructions.md  general.instructions.md  i18n.instructions.md  moderation.instructions.md  monetization.instructions.md  performance.instructions.md  rust.instructions.md  security.instructions.md  social-components.instructions.md  social-network.instructions.md  typescript.instructions.md  ui-design-system.instructions.md  whistleblower.instructions.md
docs/: CONTRIBUTING.md  README_2.md  social-network-hackathon-plan.md
scripts/: deploy.sh  dev-container-setup.sh  enhanced-pre-commit.sh.backup  generate-candid.sh  install-hooks.sh  migrate-to-rust.sh  pre-commit.sh  setup.sh
src/backend/: Cargo.toml  README.md  backend.did
src/backend/src/: auth.rs  errors.rs  lib.rs  types.rs  validation.rs
src/deCentra_backend/: main.mo
(+129 files in other folders)
